Dummy portfolio changes
Dummy portfolio changes

--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -19,8 +19,9 @@
 				</nav>
 			</header>
 		</div>
-		<div class="homeIntro"></div>
-		<div class="skills"></div>
+		<div class="about"></div>
+		<div class="box left"></div>
+		<div class="box right"></div>
 
 		<footer></footer>
 	</body>
