--- a/Portfolio/work.html
+++ b/Portfolio/work.html
@@ -19,8 +19,15 @@
 				</nav>
 			</header>
 		</div>
-		<div class="homeIntro"></div>
-		<div class="skills"></div>
+		<div id="work" class="whiteBg">
+			<section></section>
+		</div>
+		<div class="sline beigeBg">
+			<section>
+				<div></div>
+				<div></div>
+			</section>
+		</div>
 
 		<footer></footer>
 	</body>
