--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" href="css/style.css">
+	</head>
 	<body>
 		<div>
-			<header>
+			<header class="wrap">
 				<nav>
 					<ul>
 						<li>
