--- a/Portfolio/work.html
+++ b/Portfolio/work.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" href="css/style.css">
+	</head>
 	<body>
 		<div>
 			<header>
