--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -4,15 +4,15 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div>
-			<header>
+		<div class="birds">
+			<header class="wrap">
 				<nav>
 					<ul>
 						<li>
 							<a href="index.html">Home</a>
 						</li>
 						<li>
-							<a href="about.html">About me</a>
+							<a href="about.html" class="selected">About me</a>
 						</li>
 						<li>
 							<a href="work.html">Work</a>
