--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,12 +4,12 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div>
+		<div class="birds">
 			<header class="wrap">
 				<nav>
 					<ul>
 						<li>
-							<a href="index.html">Home</a>
+							<a href="index.html" class="selected">Home</a>
 						</li>
 						<li>
 							<a href="about.html">About me</a>
