--- a/Portfolio/work.html
+++ b/Portfolio/work.html
@@ -4,8 +4,8 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div>
-			<header>
+		<div class="birds">
+			<header class="wrap">
 				<nav>
 					<ul>
 						<li>
@@ -15,7 +15,7 @@
 							<a href="about.html">About me</a>
 						</li>
 						<li>
-							<a href="work.html">Work</a>
+							<a href="work.html" class="selected">Work</a>
 						</li>
 					</ul>
 				</nav>
