--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -21,7 +21,14 @@
 				</nav>
 			</header>
 		</div>
-		<div class="homeIntro"></div>
+		<div class="homeIntro">
+			<div class="wrap">
+				<h1>Web-Design</h1>
+				<span class="subline">Lorem Ipsum</span>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
 		<div class="skills"></div>
 
 		<footer></footer>
