--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div class="birds">
-			<header class="wrap">
+			<header class="wrapper">
 				<nav>
 					<ul>
 						<li>
@@ -22,15 +22,44 @@
 			</header>
 		</div>
 		<div class="homeIntro">
-			<div class="wrap">
+			<div class="wrapper">
 				<h1>Web-Design</h1>
 				<span class="subline">Lorem Ipsum</span>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 				Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</div>
-		<div class="skills"></div>
+		
+		<div class="wrapper">
+			<section>
+				<ul id="skills">
+					<li>
+						<img src="img/coffecup.png">
+						<p>Lorem Ipsum</p>
+					</li>
+					<li>
+						<img src="img/lovely_catalog.png">
+						<p>Lorem Ipsum</p>
+					</li>
+					<li>
+						<img src="img/register.png">
+						<p>Lorem Ipsum</p>
+					</li>
+				</ul>
+			</section>
+		</div>
 
-		<footer></footer>
+		<footer>
+			<div class="social-media">
+				<a href="https://twitter.com/na7tiu6ka"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
+		        <a href="https://www.facebook.com/anastasija.scepak"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
+		        <a href="https://plus.google.com/u/0/+AnastasijaScepak"><img src="img/googleplus.png" alt="Google+ Logo" class="social-icon"></a>
+
+		        <div="copyright">
+				    <p>&copy; 2014 Anastasija Scepak.</p>
+				</div>
+
+		    </div>
+		</footer>
 	</body>
 </html>
