--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,15 +34,15 @@
 			<section>
 				<ul id="skills">
 					<li>
-						<img src="img/coffecup.png">
+						<img src="img/skills/css.png">
 						<p>Lorem Ipsum</p>
 					</li>
 					<li>
-						<img src="img/lovely_catalog.png">
+						<img src="img/skills/html.png">
 						<p>Lorem Ipsum</p>
 					</li>
 					<li>
-						<img src="img/register.png">
+						<img src="img/skills/javascript.png">
 						<p>Lorem Ipsum</p>
 					</li>
 				</ul>
