--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Anastasija Scepal | Web-Designer</title>
+		<link href='https://fonts.googleapis.com/css?family=Overlock:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Overlock+SC' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div class="birds">
-			<header class="wrap">
+			<header class="wrapper">
 				<nav>
 					<ul>
 						<li>
@@ -25,6 +28,16 @@
 		<div class="box left"></div>
 		<div class="box right"></div>
 
-		<footer></footer>
+		<footer>
+			<div class="social-media">
+				<a href="https://twitter.com/na7tiu6ka"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
+		        <a href="https://www.facebook.com/anastasija.scepak"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
+		        <a href="https://plus.google.com/u/0/+AnastasijaScepak"><img src="img/googleplus.png" alt="Google+ Logo" class="social-icon"></a>
+		        <a href="https://www.linkedin.com/profile/view?id=295708852"><img src="img/linkedin.png" alt="LinkedIn Logo" class="social-icon"></a>
+		    </div>
+		    <div="copyright">
+			    <p>&copy; 2014 Anastasija Scepak.</p>
+			</div>
+		</footer>
 	</body>
 </html>
