--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -24,9 +24,15 @@
 				</nav>
 			</header>
 		</div>
-		<div class="about"></div>
-		<div class="box left"></div>
-		<div class="box right"></div>
+		
+		<div class="about">
+	        <section>
+	          <img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto">
+	          <h3>About</h3>
+	          <p>Hi, my name is Anastasija Scepak! I'm a web-designer who enjoys what magic can be done by using a code. On my free time I do photography, hiking, enjoy a good cup of caramel macchiato and of course spend time with family and friends.</p>
+	          <p>If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
+	        </section>
+	    </div>
 
 		<footer>
 			<div class="social-media">
