--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Anastasija Scepal | Web-Designer</title>
+		<title>Anastasija Scepak | Web-Designer</title>
 		<link href='https://fonts.googleapis.com/css?family=Overlock:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Overlock+SC' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
@@ -33,19 +33,19 @@
 			</div>
 		</div>
 		
-		<div class="wrapper">
+		<div id="skillContainer">
 			<section>
-				<ul id="skills">
+				<ul class="skills">
 					<li>
-						<img src="img/skills/css.png">
+						<img src="img/skills/css.png" class="box1">
 						<p>Lorem Ipsum</p>
 					</li>
 					<li>
-						<img src="img/skills/html.png">
+						<img src="img/skills/html.png" class="box2">
 						<p>Lorem Ipsum</p>
 					</li>
 					<li>
-						<img src="img/skills/javascript.png">
+						<img src="img/skills/javascript.png" class="box3">
 						<p>Lorem Ipsum</p>
 					</li>
 				</ul>
