--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Anastasija Scepal | Web-Designer</title>
+		<title>Anastasija Scepak | Web-Designer</title>
 		<link href='https://fonts.googleapis.com/css?family=Overlock:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Overlock+SC' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
