--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
+		<link rel="stylesheet" href="css/normalize.css">
 		<link href='https://fonts.googleapis.com/css?family=Overlock:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Overlock+SC' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
@@ -25,13 +26,21 @@
 			</header>
 		</div>
 		
-		<div class="about">
-	        <section>
+		<div id="about">
 	          <img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto">
-	          <h3>About</h3>
-	          <p>Hi, my name is Anastasija Scepak! I'm a web-designer who enjoys what magic can be done by using a code. On my free time I do photography, hiking, enjoy a good cup of caramel macchiato and of course spend time with family and friends.</p>
-	          <p>If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
+          	 <section id="primary">
+		          <h3>About</h3>
+		          <p>Hi, my name is Anastasija Scepak! I'm a web-designer who enjoys what magic can be done by using a code. On my free time I do photography, hiking, enjoy a good cup of caramel macchiato and of course spend time with family and friends.
+		          If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
+		      </section>
+				<section id="secondary">
+		          <ul class="contactInfo">
+	          		<li>Contact me:</li>
+	          		<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
+	          		<li class="email"><a href="mailto:na7tu6ka@gmail.com">na7tiu6ka@gmail.com</a></li>
+		          </ul>
 	        </section>
+
 	    </div>
 
 		<footer>
