--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
+		<link rel="stylesheet" href="css/normalize.css">
 		<link href='https://fonts.googleapis.com/css?family=Overlock:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Overlock+SC' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
@@ -34,8 +35,8 @@
 		</div>
 		
 		<div id="skillContainer">
-			<section>
-				<ul class="skills">
+			<div class="skills">
+				<ul>
 					<li>
 						<img src="img/skills/css.png" class="box1">
 						<p>Lorem Ipsum</p>
@@ -49,7 +50,7 @@
 						<p>Lorem Ipsum</p>
 					</li>
 				</ul>
-			</section>
+			</div>
 		</div>
 
 		<footer>
