--- a/Portfolio/work.html
+++ b/Portfolio/work.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
+		<link rel="stylesheet" href="css/normalize.css">
 		<link href='https://fonts.googleapis.com/css?family=Overlock:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Overlock+SC' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
