--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -34,13 +34,12 @@
 		          If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
 		      </section>
 				<section id="secondary">
-		          <ul class="contactInfo">
-	          		<li>Contact me:</li>
-	          		<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
-	          		<li class="email"><a href="mailto:na7tu6ka@gmail.com">na7tiu6ka@gmail.com</a></li>
-		          </ul>
+			        <ul class="contactInfo">
+			        	<li><h3>Contact me:</h3></li>
+		          		<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
+		          		<li class="email"><a href="mailto:na7tu6ka@gmail.com">na7tiu6ka@gmail.com</a></li>
+			        </ul>
 	        </section>
-
 	    </div>
 
 		<footer>
