--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,24 +34,24 @@
 			</div>
 		</div>
 		
-		<div id="skillContainer">
+	<!-- 	<div id="skillContainer">
 			<div class="skills">
 				<ul>
 					<li>
-						<img src="img/skills/css.png" class="box1">
+						<img src="img/skills/css.png" width="120px" height="120px" class="box1">
 						<p>Lorem Ipsum</p>
 					</li>
 					<li>
-						<img src="img/skills/html.png" class="box2">
+						<img src="img/skills/html.png" width="120px" height="120px"  class="box2">
 						<p>Lorem Ipsum</p>
 					</li>
 					<li>
-						<img src="img/skills/javascript.png" class="box3">
+						<img src="img/skills/javascript.png" width="120px" height="120px"  class="box3">
 						<p>Lorem Ipsum</p>
 					</li>
 				</ul>
 			</div>
-		</div>
+		</div> -->
 
 		<footer>
 			<div class="social-media">
