--- a/Portfolio/work.html
+++ b/Portfolio/work.html
@@ -28,7 +28,7 @@
 		<div id="work" class="whiteBg">
 			<section></section>
 		</div>
-		<div class="sline beigeBg">
+		<div>
 			<section>
 				<div></div>
 				<div></div>
