--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -29,17 +29,21 @@
 		<div class="wrapper">
 			<div id="about">
 		          <img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto">
-	          	 <section id="primary">
+          	 <section id="primary">
+          	 	 <div class="aboutBox">
 			          <h3>About</h3>
 			          <p>Hi, my name is Anastasija Scepak! I'm a web-designer who enjoys what magic can be done by using a code. On my free time I do photography, hiking, enjoy a good cup of caramel macchiato and of course spend time with family and friends.
 			          If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
-			      </section>
-					<section id="secondary">
+			      </div>
+		      </section>
+				<section id="secondary">
+					<div class="contactBox">
 				        <ul class="contactInfo">
 				        	<li><h3>Contact me:</h3></li>
 			          		<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
 			          		<li class="email"><a href="mailto:na7tu6ka@gmail.com">na7tiu6ka@gmail.com</a></li>
 				        </ul>
+				    </div>
 		        </section>
 		    </div>
 	    </div>
