--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div class="birds">
+		<div class="dreams">
 			<header class="wrapper">
 				<nav>
 					<ul>
@@ -28,11 +28,11 @@
 		
 		<div class="wrapper">
 			<div id="about">
-		          <img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto">
+		          <img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto profileBox">
           	 <section id="primary">
           	 	 <div class="aboutBox">
-			          <h3>About</h3>
-			          <p>Hi, my name is Anastasija Scepak! I'm a web-designer who enjoys what magic can be done by using a code. On my free time I do photography, hiking, enjoy a good cup of caramel macchiato and of course spend time with family and friends.
+			          <h3>About me</h3>
+			          <p>My name is Anastasija. I graduated as a bachelor in philology from Vilnius University Faculty of Humanities in my hometown Kaunas, Lithuania. The idea of becoming a web-designer was given by my boyfriend before graduating University. At that moment my mind was set at becoming a translator.<br>After unsuccessful applications my boyfriend suggested on becoming a web-designer again and I agreed. All the translation possibilities were in large cities and a web-designer career gave more chances on finding a job.<br>I really enjoy working on websites and polishing up my skills.<br>
 			          If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
 			      </div>
 		      </section>
