--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -32,7 +32,7 @@
           	 <section id="primary">
           	 	 <div class="aboutBox">
 			          <h3>About me</h3>
-			          <p>My name is Anastasija. I graduated as a bachelor in philology from Vilnius University Faculty of Humanities in my hometown Kaunas, Lithuania. The idea of becoming a web-designer was given by my boyfriend before graduating University. At that moment my mind was set at becoming a translator.<br>After unsuccessful applications my boyfriend suggested on becoming a web-designer again and I agreed. All the translation possibilities were in large cities and a web-designer career gave more chances on finding a job.<br>I really enjoy working on websites and polishing up my skills.<br>
+			          <p>My name is Anastasija. I graduated as a bachelor in philology from Vilnius University Faculty of Humanities in my hometown Kaunas, Lithuania. The idea of becoming a web-designer was given by my boyfriend before graduating University. At that moment my mind was set at becoming a translator.<br>After unsuccessful applications - my boyfriend suggested on becoming a web-designer again. All the translator jobs were in large cities and a web-designer career gave more chances on finding a job. So I agreed.<br>When I started learning - I had some basic knoweledge, so it made a little easier in understanding and learning.<br>I really enjoy working on websites and polishing up my skills.
 			          If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
 			      </div>
 		      </section>
