--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div class="birds">
+		<div class="dreams">
 			<header class="wrapper">
 				<nav>
 					<ul>
