--- a/Practice/index.html
+++ b/Practice/index.html
@@ -76,7 +76,7 @@
 	<div id="content">
 		
 		<!--Circle-->	
-		<div class="mosaic-block fade">
+		<div class="mosaic-block bar">
 			<a href="http://buildinternet.com/project/mightyicons/" target="_blank" class="mosaic-overlay">
 				<div class="details">
 					<h4>Mighty Social Icons</h4>
@@ -144,8 +144,5 @@
 		<div class="clearfix"></div>
 	</div>
 	
-</body>
-</html>
-
 </body>
 </html>
