--- a/For Vitalik/info.html
+++ b/For Vitalik/info.html
@@ -19,6 +19,10 @@
           </ul>
         </nav>
       </header>
+
+      <div id="wrapper">
+      </div>
+
 </body>
 <footer>
   <p>&copy; 2014 Web-Design by ...</p>
