--- a/For Vitalik/work.html
+++ b/For Vitalik/work.html
@@ -19,6 +19,17 @@
           </ul>
         </nav>
       </header>
+
+      <div id="wrapper">
+        <section>
+          <ul id="gallery">
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </section>
+      </div>
+
 </body>
 <footer>
   <p>&copy; 2014 Web-Design by ...</p>
