--- a/For Vitalik/index.html
+++ b/For Vitalik/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link href='http://fonts.googleapis.com/css?family=Alike|Playfair+Display+SC:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Lorem Ipsum</title>
 </head>
@@ -19,6 +20,9 @@
           </ul>
         </nav>
       </header>
+
+       <div id="wrapper">
+       </div>
 </body>
 <footer>
   <p>&copy; 2014 Web-Design by ...</p>
