Lorem ipsum text/css changes
Added lore ipsum text to the main page. And did some css changes.

--- a/For Vitalik/info.html
+++ b/For Vitalik/info.html
@@ -21,6 +21,8 @@
       </header>
 
       <div id="wrapper">
+        <div class="profilePhoto"></div>
+        <div class="info"></div>
       </div>
 
 </body>
