--- a/For Vitalik/index.html
+++ b/For Vitalik/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<header>
+	<header class="box">
         <a href="index.html" id="logo">
           <h1>Lorem Ipsum</h1>
           <h2>Lorem</h2>
