--- a/For Vitalik/work.html
+++ b/For Vitalik/work.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="css/normalize.css">
+  <link href='http://fonts.googleapis.com/css?family=Alike|Playfair+Display+SC:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
 	<title>Lorem Ipsum</title>
 </head>
 
 <body>
-	<header>
+	<header class="box">
         <a href="index.html" id="logo">
           <h1>Lorem Ipsum</h1>
           <h2>Lorem</h2>
