--- a/For Vitalik/info.html
+++ b/For Vitalik/info.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<header class="box">
+	<header class="box2">
         <a href="index.html" id="logo">
           <h1>Lorem Ipsum</h1>
         </a>
