--- a/For Vitalik/index.html
+++ b/For Vitalik/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-		<header class="box">
+		<header class="box1">
 	        <a href="index.html" id="logo">
 	          <h1>Lorem Ipsum</h1>
 	        </a>
