Text on header.
Added a text on top of the header.

--- a/For Vitalik/index.html
+++ b/For Vitalik/index.html
@@ -19,6 +19,10 @@
 	            <li><a href="work.html">Work</a></li>
 	          </ul>
 	        </nav>
+
+	        <div class="introText">
+	        	Lorem Ipsum
+	        </div>
 	      </header>
 
        <div id="wrapper">
