--- a/For Vitalik/index.html
+++ b/For Vitalik/index.html
@@ -19,6 +19,7 @@
 	            <li><a href="work.html">Work</a></li>
 	          </ul>
 	        </nav>
+	        <h2 id="homeBanner">Lorem Ipsum</h2>
 
 	      </header>
 
