--- a/Porftolio-v2/about.html
+++ b/Porftolio-v2/about.html
@@ -7,9 +7,16 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
-	<body>
-	</body>
+	<div id="body">
+		<div id="header"></div>
+		<div id="main">
+			<div id="content-1"></div>
+			<div id="content-2">
+				<div id="content-2-1"></div>
+				<div id="content-2-2"></div>
+			</div>
+		</div>
+	<div id="footer"></div>
 
-	<footer>
-	</footer>
+	</div>
 </html>
