--- a/Porftolio-v2/work.html
+++ b/Porftolio-v2/work.html
@@ -8,8 +8,16 @@
 	</head>
 
 	<body>
+		<div id="body">
+			<div id="header"></div>
+			<div id="main">
+				<div id="content-1"></div>
+				<div id="content-2">
+					<div id="content-2-1"></div>
+					<div id="content-2-2"></div>
+				</div>
+			</div>
+		<div id="footer"></div>
+		</div>
 	</body>
-
-	<footer>
-	</footer>
 </html>
