--- a/Porftolio-v2/about.html
+++ b/Porftolio-v2/about.html
@@ -2,13 +2,27 @@
 <html>
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
-		<link rel="stylesheet" type="text/css" href="css/normalize">
+		<link rel="stylesheet" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic,500italic|Raleway:400,500,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
 	<div id="body">
-		<div id="header"></div>
+		<div id="header">
+			<nav>
+				<ul>
+					<li>
+						<a href="index.html" class="selected">Home</a>
+					</li>
+					<li>
+						<a href="about.html">About me</a>
+					</li>
+					<li>
+						<a href="work.html">Work</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 		<div id="main">
 			<div id="content-1"></div>
 			<div id="content-2">
@@ -16,7 +30,18 @@
 				<div id="content-2-2"></div>
 			</div>
 		</div>
-	<div id="footer"></div>
+	<div id="footer">
+		<div class="social-media">
+				<a href="https://twitter.com/na7tiu6ka"><img src="img/twitter.png" width="54" height="72" alt="Twitter Logo" class="social-icon"></a>
+		        <a href="https://www.facebook.com/anastasija.scepak"><img src="img/facebook.png" width="54" height="72" alt="Facebook Logo" class="social-icon"></a>
+		        <a href="https://plus.google.com/u/0/+AnastasijaScepak"><img src="img/googleplus.png" alt="Google+ Logo" width="54" height="72" class="social-icon"></a>
+		        <a href="https://www.linkedin.com/profile/view?id=295708852"><img src="img/linkedin.png" alt="LinkedIn Logo" width="54" height="72" class="social-icon"></a>
+		    </div>
+		    <div="copyright">
+		    <p>&copy; 2014 Anastasija Scepak</p>
+			</div>
+		</div>
+	</div>
 
 	</div>
 </html>
