--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
-		<link rel="stylesheet" href="css/normalize">
+		<link rel="stylesheet" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic,500italic|Raleway:400,500,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
@@ -26,7 +26,7 @@
 		<div id="main">
 			<div id="content-1">
 				<h1>Web-Design</h1>
-				<span class="secondHeader">Lorem Ipsum</span>
+				<h2>Lorem Ipsum</h2>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 				Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
 			</div>
@@ -37,13 +37,13 @@
 		</div>
 	<div id="footer">
 		<div class="social-media">
-				<a href="https://twitter.com/na7tiu6ka"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
-		        <a href="https://www.facebook.com/anastasija.scepak"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
-		        <a href="https://plus.google.com/u/0/+AnastasijaScepak"><img src="img/googleplus.png" alt="Google+ Logo" class="social-icon"></a>
-		        <a href="https://www.linkedin.com/profile/view?id=295708852"><img src="img/linkedin.png" alt="LinkedIn Logo" class="social-icon"></a>
+				<a href="https://twitter.com/na7tiu6ka"><img src="img/twitter.png" width="54" height="72" alt="Twitter Logo" class="social-icon"></a>
+		        <a href="https://www.facebook.com/anastasija.scepak"><img src="img/facebook.png" width="54" height="72" alt="Facebook Logo" class="social-icon"></a>
+		        <a href="https://plus.google.com/u/0/+AnastasijaScepak"><img src="img/googleplus.png" alt="Google+ Logo" width="54" height="72" class="social-icon"></a>
+		        <a href="https://www.linkedin.com/profile/view?id=295708852"><img src="img/linkedin.png" alt="LinkedIn Logo" width="54" height="72" class="social-icon"></a>
 		    </div>
 		    <div="copyright">
-		    <p>&copy; 2014 Anastasija Scepak.</p>
+		    <p>&copy; 2014 Anastasija Scepak</p>
 			</div>
 		</div>
 
