--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -57,7 +57,7 @@
 		        <a href="https://plus.google.com/u/0/+AnastasijaScepak"><img src="img/googleplus.png" alt="Google+ Logo" class="social-icon"></a>
 		        <a href="https://www.linkedin.com/profile/view?id=295708852"><img src="img/linkedin.png" alt="LinkedIn Logo" class="social-icon"></a>
 		    </div>
-		    <div="copyright">
+		    <div class="copyright">
 		    <p>&copy; 2014 Anastasija Scepak.</p>
 		</div>
 		</footer>
