--- a/Porftolio-v2/work.html
+++ b/Porftolio-v2/work.html
@@ -37,7 +37,7 @@
 		        <a href="https://plus.google.com/u/0/+AnastasijaScepak"><img src="img/googleplus.png" alt="Google+ Logo" width="54" height="72" class="social-icon"></a>
 		        <a href="https://www.linkedin.com/profile/view?id=295708852"><img src="img/linkedin.png" alt="LinkedIn Logo" width="54" height="72" class="social-icon"></a>
 		    </div>
-		    <div="copyright">
+		    <div class="copyright">
 		    <p>&copy; 2014 Anastasija Scepak</p>
 			</div>
 		</div>
