--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -37,10 +37,11 @@
 		</div>
 	<div id="footer">
 		<div class="social-media">
-				<a href="https://twitter.com/na7tiu6ka"><img src="img/twitter.png" width="54" height="72" alt="Twitter Logo" class="social-icon"></a>
-		        <a href="https://www.facebook.com/anastasija.scepak"><img src="img/facebook.png" width="54" height="72" alt="Facebook Logo" class="social-icon"></a>
-		        <a href="https://plus.google.com/u/0/+AnastasijaScepak"><img src="img/googleplus.png" alt="Google+ Logo" width="54" height="72" class="social-icon"></a>
-		        <a href="https://www.linkedin.com/profile/view?id=295708852"><img src="img/linkedin.png" alt="LinkedIn Logo" width="54" height="72" class="social-icon"></a>
+				<a href="https://twitter.com/na7tiu6ka" target="_blank"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
+		        <a href="https://www.facebook.com/anastasija.scepak" target="_blank"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
+		        <a href="https://plus.google.com/u/0/+AnastasijaScepak" target="_blank"><img src="img/googleplus.png" alt="Google+ Logo" class="social-icon"></a>
+		        <a href="https://www.linkedin.com/profile/view?id=295708852" target="_blank"><img src="img/linkedin.png" alt="LinkedIn Logo" class="social-icon"></a>
+		        <a href="http://instagram.com/na7tiu6ka" target="_blank"><img src="img/instagram.png" alt="Instagram Logo" class="social-icon"></a>
 		    </div>
 		    <div class="copyright">
 		    <p>&copy; 2014 Anastasija Scepak</p>
