--- a/Porftolio-v2/about.html
+++ b/Porftolio-v2/about.html
@@ -32,11 +32,11 @@
 			          If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
 				</div>
 				<div id="about-2-2">
-					<ul class="contactInfo">
+					<ol class="contactInfo">
 				        	<li><h3>Contact me:</h3></li>
 			          		<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
 			          		<li class="email"><a href="mailto:na7tu6ka@gmail.com">na7tiu6ka@gmail.com</a></li>
-				        </ul>
+				        </ol>
 				</div>
 			</div>
 		</div>
