Skill container in the centre
Pictures in the “boxes” are in the centre.

--- a/Porftolio-v2/about.html
+++ b/Porftolio-v2/about.html
@@ -24,7 +24,7 @@
 			</nav>
 		</div>
 		<div id="main">
-			<div id="about-1"><img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto profileBox"></div>
+			<div id="about-1"><img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto"></div>
 			<div id="about-2">
 				<div id="about-2-1">
 					<h3>About me</h3>
