--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -30,11 +30,11 @@
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 				Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
 			</div>
-			<div id="content-2" class="skillContainer">
-				<div id="content-2-1"><img src="img/skills/html.png"><p>Lorem Ipsum</p></div>
-				<div id="content-2-2"><img src="img/skills/css.png"><p>Lorem Ipsum</p></div>
-				<div id="content-2-3"><img src="img/skills/javascript.png"><p>Lorem Ipsum</p></div>
-			</div>
+			<ul id="content-2" class="skillContainer">
+				<li id="content-2-1"><img src="img/skills/html.png"><p>Lorem Ipsum</p></li>
+				<li id="content-2-2"><img src="img/skills/css.png"><p>Lorem Ipsum</p></li>
+				<li id="content-2-3"><img src="img/skills/javascript.png"><p>Lorem Ipsum</p></li>
+			</ul>
 		</div>
 	<div id="footer">
 		<div class="social-media">
