--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -31,10 +31,10 @@
 				Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
 			</div>
 
-				<div id="container-1">
-					<div id="container-2"><img src="img/skills/html.png"><p>Lorem Ipsum</p></div>
-					<div id="container-2-1"><img src="img/skills/css.png"><p>Lorem Ipsum</p></div>
-					<div id="container-2-2"><img src="img/skills/JQuery.png"><p>Lorem Ipsum</p></div>
+				<div class="container">
+					<div class="column-left"><img src="img/skills/html.png"><p>Lorem Ipsum</p></div>
+					<div class="column-center"><img src="img/skills/css.png"><p>Lorem Ipsum</p></div>
+					<div class="column-right"><img src="img/skills/JQuery.png"><p>Lorem Ipsum</p></div>
 				</div>
 			</div>
 
