--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -66,6 +66,8 @@
 			</div>
 
 		</div>
-	<!-- icons from http://www.shutterstock.com/ -->
+	<!-- vector icons from http://www.shutterstock.com/
+	ww.iconsdownload.net
+	http://www.flaticon.com/ -->
 	</body>
 </html>
