Icon, profile, favicon
Changed js vector icon, profile photo and added a favicon to the page.

--- a/Porftolio-v2/about.html
+++ b/Porftolio-v2/about.html
@@ -4,7 +4,8 @@
 		<title>Anastasija Scepak | Web-Designer</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic,500italic|Raleway:400,500,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="icon" href="img/favicon.ico">
 	</head>
 
 	<div id="body">
