--- a/Porftolio-v2/contact.html
+++ b/Porftolio-v2/contact.html
@@ -20,10 +20,10 @@
 						<a href="about.html">About me</a>
 					</li>
 					<li>
-						<a href="work.html" class="selected">Work</a>
+						<a href="work.html">Work</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="contact.html" class="selected">Contact</a>
 					</li>
 				</ul>
 			</nav>
