--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic,500italic|Raleway:400,500,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="icon" href="img/favicon.ico">
 	</head>
 	<body>
@@ -20,6 +21,9 @@
 						</li>
 						<li>
 							<a href="work.html">Work</a>
+						</li>
+						<li>
+							<a href="contact.html">Contact</a>
 						</li>
 					</ul>
 				</nav>
