Contact page filled
and is responsive.

--- a/Porftolio-v2/contact.html
+++ b/Porftolio-v2/contact.html
@@ -28,26 +28,36 @@
 				</ul>
 			</nav>
 		</div>
-		<div id="main">
-			<div id="content-1"></div>
-			<div id="content-2">
-				<div id="content-2-1"></div>
-				<div id="content-2-2"></div>
-			</div>
-		</div>
-	<div id="footer">
-		<div class="social-media">
-				<a href="https://twitter.com/na7tiu6ka" target="_blank"><img src="img/twitter.png" class="social-icon"></a>
-		        <a href="https://www.facebook.com/anastasija.scepak" target="_blank"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
-		        <a href="https://plus.google.com/u/0/+AnastasijaScepak" target="_blank"><img src="img/googleplus.png" alt="Google+ Logo" class="social-icon"></a>
-		        <a href="https://www.linkedin.com/profile/view?id=295708852" target="_blank"><img src="img/linkedin.png" alt="LinkedIn Logo" class="social-icon"></a>
-		         <a href="http://instagram.com/na7tiu6ka" target="_blank"><img src="img/instagram.png" alt="Instagram Logo" class="social-icon"></a>
-		    </div>
-		    <div class="copyright">
-		    <p>&copy; 2014 Anastasija Scepak</p>
-			</div>
-		</div>
-	</div>
+		<div id="wrapper">
+	        <section id="primary">
+	          <h3>General Information</h3>
+	          <p>If you have any questions, don't hesitate to contact me.</p>
+	          <p>Please only use phone contact for urgent inquiries. <a href="http://twitter.com/intent/tweet?screen_name=na7tiu6ka" target="_blank">Twitter</a> and email are the best way to reach me.</p>
+	        </section>
 
-	</div>
+	        <section id="secondary">
+		      <h3>Contact Details</h3>
+		      <ol class="contactInfo">
+			      <li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
+			      <li class="email"><a href="mailto:na7tu6ka@gmail.com">na7tiu6ka@gmail.com</a></li>
+		      </ol>
+	        </section>
+
+	    </div>
+
+		<div id="footer">
+			<div class="social-media">
+					<a href="https://twitter.com/na7tiu6ka" target="_blank"><img src="img/twitter.png" class="social-icon"></a>
+			        <a href="https://www.facebook.com/anastasija.scepak" target="_blank"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
+			        <a href="https://plus.google.com/u/0/+AnastasijaScepak" target="_blank"><img src="img/googleplus.png" alt="Google+ Logo" class="social-icon"></a>
+			        <a href="https://www.linkedin.com/profile/view?id=295708852" target="_blank"><img src="img/linkedin.png" alt="LinkedIn Logo" class="social-icon"></a>
+			         <a href="http://instagram.com/na7tiu6ka" target="_blank"><img src="img/instagram.png" alt="Instagram Logo" class="social-icon"></a>
+			    </div>
+			    <div class="copyright">
+			    <p>&copy; 2014 Anastasija Scepak</p>
+				</div>
+			</div>
+		</div>
+
+		</div>
 </html>
