--- a/Porftolio-v2/about.html
+++ b/Porftolio-v2/about.html
@@ -28,23 +28,16 @@
 				</ul>
 			</nav>
 		</div>
-		<div id="main">
-			<div id="about-1"><img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto"></div>
-			<div id="about-2">
-				<div id="about-2-1">
-					<h3>About me</h3>
-			          <p>My name is Anastasija. I graduated as a bachelor in philology from Vilnius University Faculty of Humanities in my hometown Kaunas, Lithuania. The idea of becoming a web-designer was given by my boyfriend before graduating. At that moment my mind was set at becoming a translator.<br>After unsuccessful applications - my boyfriend suggested on becoming a web-designer again. All the translator jobs were in large cities and a web-designer career gave more chances on finding a job. So I agreed.<br>When I started learning - I had some basic knoweledge, so it made a little easier in understanding and learning.<br>I really enjoy working on websites and polishing up my skills.
-			          If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
-				</div>
-				<div id="about-2-2">
-					<ol class="contactInfo">
-				        	<li><h3>Contact me:</h3></li>
-			          		<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
-			          		<li class="email"><a href="mailto:na7tu6ka@gmail.com">na7tiu6ka@gmail.com</a></li>
-				        </ol>
-				</div>
-			</div>
+
+		<div id="wrapper">
+			 <section>
+		          <img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto">
+		          <h3>About me</h3>
+		          <p>My name is Anastasija. I graduated as a bachelor in philology from Vilnius University Faculty of Humanities in my hometown Kaunas, Lithuania. The idea of becoming a web-designer was given by my boyfriend before graduating. At that moment my mind was set at becoming a translator.<br>After unsuccessful applications - my boyfriend suggested on becoming a web-designer again. All the translator jobs were in large cities and a web-designer career gave more chances on finding a job. So I agreed.<br>When I started learning - I had some basic knoweledge, so it made a little easier in understanding and learning.<br>I really enjoy working on websites and polishing up my skills.
+		          If you'd like to follow me on Twitter, my user name is <a href="http://www.twtter.com/na7tiu6ka">@na7tiu6ka</a>.</p>
+	        </section>
 		</div>
+
 	<div id="footer">
 		<div class="social-media">
 				<a href="https://twitter.com/na7tiu6ka" target="_blank"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
