--- a/Porftolio-v2/work.html
+++ b/Porftolio-v2/work.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic,500italic|Raleway:400,500,700' rel='stylesheet' type='text/css'>
+		<link href="http://fonts.googleapis.com/css?family=Poiret+One|Donegal+One" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="icon" href="img/favicon.ico">
