--- a/Porftolio-v2/contact.html
+++ b/Porftolio-v2/contact.html
@@ -32,7 +32,7 @@
 	        <section id="primary">
 	          <h3>General Information</h3>
 	          <p>If you have any questions, don't hesitate to contact me.</p>
-	          <p>Please only use phone contact for urgent inquiries. <a href="http://twitter.com/intent/tweet?screen_name=na7tiu6ka" target="_blank">Twitter</a> and email are the best way to reach me.</p>
+	          <p>Please only use phone contact for urgent inquiries. <a href="http://twitter.com/intent/tweet?screen_name=na7tiu6ka" target="_blank">Twitter</a>, email or <a href="https://www.linkedin.com/profile/view?id=295708852">LinkedIn</a> are the best way to reach me.</p>
 	        </section>
 
 	        <section id="secondary">
