--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href="http://fonts.googleapis.com/css?family=Poiret+One|Donegal+One" rel="stylesheet" type="text/css">
+		<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic|Varela+Round' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="icon" href="img/favicon.ico">
+		<script type='text/javascript' src='javascript.js'></script>
 	</head>
 	<body>
 		<div id="body">
