--- a/Porftolio-v2/work.html
+++ b/Porftolio-v2/work.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
+
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic|Varela+Round' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="icon" href="img/favicon.ico">
-		<script type='text/javascript' src='javascript.js'></script>
 	</head>
 <body>
 	<div id="body">
@@ -30,11 +30,33 @@
 			</nav>
 		</div>
 		<div id="main">
-			<div id="content-1"></div>
-			<div id="content-2">
-				<div id="content-2-1"></div>
-				<div id="content-2-2"></div>
-			</div>
+
+			<!-- PORTFOLIO  -->
+
+			<!-- 1st bar -->
+			<div class="mosaic-block bar">
+			<a href="#" target="_blank" class="mosaic-overlay">
+				<div class="details">
+					<h4>Lorem Ipsum</h4>
+				</div>
+			</a>
+			<div class="mosaic-backdrop"><img src="img/portfolio_links/dreams.JPG"/></div>
+		</div>
+
+			<!-- 2nd bar -->
+			<div class="mosaic-block bar">
+			<a href="#" target="_blank" class="mosaic-overlay">
+				<div class="details">
+					<h4>Lorem Ipsum</h4>
+				</div>
+			</a>
+			<div class="mosaic-backdrop"><img src="img/portfolio_links/city.JPG"/></div>
+
+			<div class="clearfix"></div>
+		</div>
+
+		<!-- END PORTFOLIO -->
+
 		</div>
 	<div id="footer">
 		<div class="social-media">
@@ -51,5 +73,24 @@
 	</div>
 
 	</div>
+
+
+	<!-- JQUERY -->
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+	<script type="text/javascript" src="js/mosaic.1.0.1.js"></script>
+	<script type="text/javascript">
+
+	jQuery(function($){
+				
+	$('.bar').mosaic({
+		animation	:	'slide'		//fade or slide
+	});
+			
+			
+	    
+	    });
+
+	</script>
+
 </body>
 </html>
