--- a/Porftolio-v2/about.html
+++ b/Porftolio-v2/about.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div id="body">
-		<div id="header" class="second">
+		<div id="header" class="second" data-stellar-background-ratio="0.5" style="background-position: 50% -10px">
 			<nav>
 				<ul>
 					<li>
@@ -56,6 +56,14 @@
 	</div>
 
 	</div>
+
+	<!-- JQUERY -->
+	<script type="text/javascript" src="/js/jquery.stellar.min.js"></script>
+	<script type="text/javascript" src="/js/jquery.stellar.js"></script>
+	<script type="text/javascript">
+	</script>
+
+	<!-- END JQUERY -->
 
 </body>
 </html>
