--- a/Porftolio-v2/contact.html
+++ b/Porftolio-v2/contact.html
@@ -11,7 +11,7 @@
 
 	<body>
 	<div id="body">
-		<div id="header" class="fourth">
+		<div id="header" class="fourth" data-stellar-background-ratio="0.5" style="background-position: 50% -10px">
 			<nav>
 				<ul>
 					<li>
@@ -61,5 +61,15 @@
 		</div>
 
 		</div>
+
+	<!-- JQUERY -->
+	<script type="text/javascript" src="/js/jquery.stellar.min.js"></script>
+	<script type="text/javascript" src="/js/jquery.stellar.js"></script>
+	<script type="text/javascript">
+	</script>
+
+	<!-- END JQUERY -->
+
+
 	</body>
 </html>
