--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div id="body">
-			<div id="header" class="first">
+			<div id="header" class="first" data-stellar-background-ratio="0.5" style="background-position: 50% -10px">
 				<nav>
 					<ul>
 						<li>
@@ -74,5 +74,18 @@
 	<!-- vector icons from http://www.shutterstock.com/
 	ww.iconsdownload.net
 	http://www.flaticon.com/ -->
+
+	<!-- JQUERY -->
+	<script type="text/javascript" src="/js/jquery.stellar.min.js"></script>
+	<script type="text/javascript" src="/js/jquery.stellar.js"></script>
+	<script type="text/javascript">
+		
+		
+	</script>
+
+	<!-- END JQUERY -->
+
+
+
 	</body>
 </html>
