--- a/Porftolio-v2/work.html
+++ b/Porftolio-v2/work.html
@@ -11,7 +11,7 @@
 	</head>
 <body>
 	<div id="body">
-		<div id="header" class="third">
+		<div id="header" class="third" data-stellar-background-ratio="0.5" style="background-position: 50% -10px">
 			<nav>
 				<ul>
 					<li>
@@ -29,7 +29,7 @@
 				</ul>
 			</nav>
 		</div>
-		<div id="wrapper">
+		<div id="wrapper" class="height">
 
 			<!-- PORTFOLIO  -->
 
@@ -76,6 +76,9 @@
 
 
 	<!-- JQUERY -->
+	<script type="text/javascript" src="/js/jquery.stellar.min.js"></script>
+	<script type="text/javascript" src="/js/jquery.stellar.js"></script>
+
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 	<script type="text/javascript" src="js/mosaic.1.0.1.js"></script>
 	<script type="text/javascript">
@@ -91,6 +94,10 @@
 	    });
 
 	</script>
+
+	<!-- END JQUERY -->
+
+
 
 </body>
 </html>
