--- a/Porftolio-v2/about.html
+++ b/Porftolio-v2/about.html
@@ -7,11 +7,31 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="icon" href="img/favicon.ico">
+
+		<!-- JQUERY -->
+
+		<!-- header -->
+			<script type="text/javascript" src="js/jquery.min.js"></script>
+			<script type="text/javascript" src="js/stellar.js"></script>
+			<script>
+				$(function(){
+					$.stellar({
+						horizontalScrolling: false,
+						verticalOffset: 50
+					});
+				});
+			</script>
+
+	<!-- header end -->
+
+	<!-- END JQUERY -->
+
+
 	</head>
 
 <body>
 	<div id="body">
-		<div id="header" class="second" data-stellar-background-ratio="0.5" style="background-position: 50% -10px">
+		<div id="header" class="second" data-stellar-background-ratio="2" style="background-position: 50% -10px">
 			<nav>
 				<ul>
 					<li>
@@ -56,14 +76,6 @@
 	</div>
 
 	</div>
-
-	<!-- JQUERY -->
-	<script type="text/javascript" src="/js/jquery.stellar.min.js"></script>
-	<script type="text/javascript" src="/js/jquery.stellar.js"></script>
-	<script type="text/javascript">
-	</script>
-
-	<!-- END JQUERY -->
 
 </body>
 </html>
