--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic|Varela+Round' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic|Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="icon" href="img/favicon.ico">
@@ -17,20 +17,20 @@
 				$(function(){
 					$.stellar({
 						horizontalScrolling: false,
-						verticalOffset: 60
+						verticalOffset: 50
 					});
 				});
 			</script>
 
-	<!-- header end -->
+		<!-- header end -->
 
-	<!-- END JQUERY -->
+		<!-- END JQUERY -->
 
 
 	</head>
 	<body>
 		<div id="body">
-			<div id="header" class="first" data-stellar-background-ratio="2" data-stellar-offset-parent="true">
+			<div id="header1" data-stellar-background-ratio="2" data-stellar-offset-parent="true" style="background-position: 50%">
 				<nav>
 					<ul>
 						<li>
@@ -93,7 +93,9 @@
 		</div>
 	<!-- vector icons from http://www.shutterstock.com/
 	ww.iconsdownload.net
-	http://www.flaticon.com/ -->
+	http://www.flaticon.com/ 
+
+	http://markdalgleish.com/projects/stellar.js/	-->
 
 
 	</body>
