--- a/Porftolio-v2/contact.html
+++ b/Porftolio-v2/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Anastasija Scepak | Web-Designer</title>
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic|Varela+Round' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic|Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="icon" href="img/favicon.ico">
@@ -31,7 +31,7 @@
 
 	<body>
 	<div id="body">
-		<div id="header" class="fourth" data-stellar-background-ratio="2" style="background-position: 50% -10px">
+		<div id="header4" data-stellar-background-ratio="2" style="background-position: 50% -10px" data-stellar-offset-parent="true">
 			<nav>
 				<ul>
 					<li>
