--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -49,7 +49,7 @@
 				</nav>
 			</div>
 			<div class="main">
-				<div id="content-1">
+				<div class="content">
 					<h1>Web-Design</h1>
 					<h2>Lorem Ipsum</h2>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
