--- a/Porftolio-v2/work.html
+++ b/Porftolio-v2/work.html
@@ -16,7 +16,7 @@
 		<script type="text/javascript" src="js/mosaic.1.0.1.js"></script>
 
 		<script>
-			jQuery(function($){
+			 jQuery(function($){
 						
 			$('.bar').mosaic({
 				animation	:	'slide'		//fade or slide
@@ -50,7 +50,8 @@
 	</head>
 <body>
 	<div id="body">
-		<div id="header3" data-stellar-background-ratio="2" data-stellar-offset-parent="true" style="background-position: 50%">
+		<div id="header3" data-stellar-background-ratio="2" data-stellar-offset-parent="true" style="background-position: 50% 0px">
+
 			<nav>
 				<ul>
 					<li>
