--- a/Porftolio-v2/about.html
+++ b/Porftolio-v2/about.html
@@ -19,7 +19,7 @@
 						horizontalScrolling: false,
 						verticalOffset: 50
 					});
-				});
+				});	
 			</script>
 
 	<!-- header end -->
@@ -31,7 +31,8 @@
 
 <body>
 	<div id="body">
-		<div id="header2" data-stellar-background-ratio="2" data-stellar-offset-parent="true" style="background-position: 50% -10px;">
+		<div id="header2" data-stellar-background-ratio="2" data-stellar-offset-parent="true" style="background-position: 50% 0px">
+
 			<nav>
 				<ul>
 					<li>
@@ -54,7 +55,7 @@
 			 <section id="firstColumn">
 		          <img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto">
 		      </section>
-	          <section id="secongColulmn">
+	          <section id="secondColulmn">
 		          <h3>About me</h3>
 		          <p>My name is Anastasija. I graduated as a bachelor in philology from Vilnius University Faculty of Humanities in my hometown Kaunas, Lithuania. The idea of becoming a web-designer was given by my boyfriend before graduating. At that moment my mind was set at becoming a translator.<br>After unsuccessful applications - my boyfriend suggested on becoming a web-designer again. All the translator jobs were in large cities and a web-designer career gave more chances on finding a job. So I agreed.<br>When I started learning - I had some basic knoweledge, so it made a little easier in understanding and learning.<br>I really enjoy working on websites and polishing up my skills.
 		          If you'd like to follow me on Twitter, my user name is <a href="http://www.twitter.com/na7tiu6ka" target="_blank">@na7tiu6ka</a>.</p>
