picture file name change
picture file name change

--- a/Porftolio-v2/work.html
+++ b/Porftolio-v2/work.html
@@ -80,7 +80,7 @@
 					<h4>Lorem Ipsum</h4>
 				</div>
 			</a>
-			<div class="mosaic-backdrop"><img src="img/portfolio_links/dreams.JPG"/></div>
+			<div class="mosaic-backdrop"><img src="img/portfolio_links/dreamspic.jpg"/></div>
 		</div>
 
 		<!-- 2nd bar -->
@@ -90,29 +90,7 @@
 					<h4>Lorem Ipsum</h4>
 				</div>
 			</a>
-			<div class="mosaic-backdrop"><img src="img/portfolio_links/city.JPG"/></div>
-
-			<div class="clearfix"></div>
-		</div>
-
-		<!-- 3rd bar -->
-		<div class="mosaic-block bar">
-			<a href="#" target="_blank" class="mosaic-overlay">
-				<div class="details">
-					<h4>Lorem Ipsum</h4>
-				</div>
-			</a>
-			<div class="mosaic-backdrop"><img src="img/portfolio_links/dreams.JPG"/></div>
-		</div>
-
-		<!-- 4th bar -->
-		<div class="mosaic-block bar">
-			<a href="#" target="_blank" class="mosaic-overlay">
-				<div class="details">
-					<h4>Lorem Ipsum</h4>
-				</div>
-			</a>
-			<div class="mosaic-backdrop"><img src="img/portfolio_links/city.JPG"/></div>
+			<div class="mosaic-backdrop"><img src="img/portfolio_links/citypic.jpg"/></div>
 
 			<div class="clearfix"></div>
 		</div>
