--- a/Harry Potter/about.html
+++ b/Harry Potter/about.html
@@ -16,7 +16,7 @@
 			<nav>
 				<ul>
 					<li><a href="about.html" class="selected">О создателе сайта</a></li>
-					<li><a href="fanart.html" class="selected">Фанарт</a></li>
+					<li><a href="fanart.html">Фанарт</a></li>
 					<li><a href="guestbook.html">Гостевая книга</a></li>
 				</ul>
 			</nav>
